<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/test3_bar_style"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/write_icon_l"
        app:title="@string/test3_title"
        app:titleTextColor="@color/white" />


    <ImageButton
        android:id="@+id/home_3"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:src="@drawable/home_w"
        app:backgroundTint="#00E53935"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
        app:layout_constraintEnd_toEndOf="@+id/toolbar3"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/task1_3_hint"
        android:inputType="textVisiblePassword|textNoSuggestions"
        android:textSize="22dp"
        app:layout_constraintBottom_toTopOf="@+id/var1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task" />

    <TextView
        android:id="@+id/task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="v1 - v2 - v3"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/enterAnswer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/var1"
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/test3_style"
        android:minWidth="150dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterAnswer" />

    <TextView
        android:id="@+id/page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1/10"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/var1" />

</androidx.constraintlayout.widget.ConstraintLayout>